# AP62_AltFN2

./: README.md
AltFN/: .gitignore  pyproject.toml
AltFN/src/: AltFN.py  config.json  main.py
AltFN2/: .gitignore  pyproject.toml
AltFN2/sample/: log_config.json
AltFN2/src/: AltFN2.py  config.json  main.py
AltFN2/tests/: test_main.py
